--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,32 @@
 <html>
 <head>
 <style>
-
-    body {
-        text-align: center;
-        margin-top: 50px;
-        font-size: 25px;
-        background-color: darkslategrey;
-
-    }
-
-    h1 {
-        color: skyblue;
-    }
-
+body{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 30px;
+    background-color: red;
+}
+h1{
+    text-color: yellow;
+}
+h5{
+    text-color: green;
+    background-color: blue;
+}
+input[type = "submit"]
+{
+    background-color: green;
+    text-color: red;
+    margin: 4px;
+}
 </style>
 </head>
 
 <!--##NO predefine-->
 <body>
     <h1>Advance Calculator!</h1>  <br>
-    <img width="20%" height="20%" src="{{url_for('static', filename='img.png') }} " />
+    <img width="20%" height="20%" src="{{url_for('static', filename='img.png') }} " /><br><br>
     <form method="POST">
         <label >Enter expression</label><br><br>
         <select class="is-focused is-large" name="operation" aria-label="operationDropdown">
@@ -33,6 +39,7 @@
 </form>
 
 
-    <p>Your equation is {{equation}} = {{ result }}</p>
+    <p>Your equation is {{equation}} = {{ result }}</p><br><br><br>
+    <footer><h5>Created by Alex Joseph</h5></footer>
 </body>
 </html>
